# KagglerAssistant

./: .coverage  .env.example  .gitignore  .gitleaks.toml  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: graph.mmd  开发备忘.md  项目设计.md
docs/imgs/: source.drawio
scripts/: draw_graph.py
src/: __init__.py
src/kaggler/app/: cli.py
src/kaggler/app/tui/: app.py  app.tcss  commands.py  screens.py  widgets.py
src/kaggler/graph/: assembly.py  binding.py  edges.py  hitl.py  memory.py  nodes.py  state.py  types.py
src/kaggler/ir/: __init__.py  emit.py  interpret.py  schema.py
src/kaggler/modes/: registry.py
src/kaggler/modes/common/: compute.py  tools.py
src/kaggler/modes/eda/: __init__.py  compute.py  prompts.py  tools.py
src/kaggler/modes/feature_engineering/: __init__.py  codegen.py  compute.py  prompts.py  tools.py  types.py
src/kaggler/persistence/: conversation_store.py  data_export.py  data_provider.py  data_version_store.py  pipeline_replay.py  version_ledger_store.py
src/kaggler/shared/: __init__.py  config.py  limits.py  paths.py  serialization.py  session_manager.py  token_estimate.py  tool_helpers.py  types.py  wrapper.py
src/kaggler/workspace/: data_provider.py  manager.py
tests/: _ir_subprocess_child.py  conftest.py  test_cli.py  test_common_tools.py  test_config.py  test_conversation_store.py  test_data_export.py  test_data_provider.py  test_data_version_store.py  test_eda_compute.py  test_eda_tools.py  test_fe_engineer_compute.py  test_fe_engineer_tools.py  test_graph_assembly.py  test_graph_edges.py  test_graph_hitl.py  test_graph_memory.py  test_graph_nodes.py  test_graph_state.py  test_ir_diff.py  test_ir_interpret_emit.py  test_ir_persistence.py  test_ir_schema.py  test_limits.py  test_paths.py  test_pipeline_replay.py  test_registry.py  test_session_manager_persistence.py  test_token_estimate.py  test_types.py  test_version_ledger_store.py  test_wrapper.py
