[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "KagglerAssistant"
version = "0.0.1"
description = ""
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    # Agent
    "langchain-core",
    "langgraph",
    "langchain-deepseek",
    # Data Processing
    "polars",
    "polars_ds",
    "numpy",
    "python-dotenv",
    "textual",

    "scikit-learn"
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-mock",
]
knowledge = [
    "chromadb>=0.4.0",
]
ensemble_trees = [

]

[tool.hatch.build.targets.wheel]
packages = ["src/kaggler"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]