[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "KagglerAssistant"
version = "0.0.1"
description = ""
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    # Agent
    "langchain-core",
    "langgraph",
    "langchain-deepseek",
    # Data Processing
    "polars",
    "polars_ds",
    "numpy",
    "python-dotenv",
    "textual",

    "scikit-learn"
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-mock",
    "pytest-cov",
    "ruff"
]
knowledge = [
    "chromadb>=0.4.0",
]
ensemble_trees = [

]

[tool.hatch.build.targets.wheel]
packages = ["src/kaggler"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
target-version = "py310"
line-length = 88
src = ["src", "tests"]

[tool.ruff.lint]
# 默认规则集（pyflakes F + 关键 pycodestyle E）：捕获未用导入、未定义名、
# 真实语法/逻辑问题。CI 以 `ruff check` 对任何命中即判失败。
# 暂不开启 E501/I/UP 等会要求大面积重排既有源码的规则，避免与现有约定冲突。
select = ["E4", "E7", "E9", "F"]