[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "KagglerAssistant"
version = "0.0.1"
description = ""
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    # Agent
    "langchain-core",
    "langgraph",
    "langchain-deepseek",
    # Data Processing
    "polars",
    "polars_ds",
    "numpy",
    "scipy>=1.9",
    "python-dotenv",
    "textual",
    "scikit-learn",
    "pydantic",
    "pydantic-settings"
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-mock",
    "pytest-cov",
    "ruff"
]
knowledge = [
    "chromadb>=0.4.0",
]
ensemble_trees = [

]

[project.scripts]
# 安装后即可用命令启动，无需再 `python -m` 跑源码：
#   kaggler      → 启动 TUI 对话界面
#   kaggler-cli  → 启动最小 REPL（需传数据集路径）
kaggler = "kaggler.app.tui.app:main"
kaggler-cli = "kaggler.app.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/kaggler"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.coverage.run]
# 排除在覆盖率统计之外的内容：
# - app/tui/*：Textual TUI 展示层（事件循环 + 后台 worker 线程驱动 LLM 会话）。
#   有意义的测试需重度 mock 异步/线程，脆弱且主要在测框架而非本项目逻辑，故按
#   业界惯例将 UI 外壳排除；其下层逻辑（graph/modes/wrapper）另行覆盖。
# - modes/common/compute.py、modes/modeling/*：尚未实现的占位桩（函数体多为
#   ``pass``），待真正开发后再纳入统计。
omit = [
    "src/kaggler/app/tui/*",
    "src/kaggler/modes/common/compute.py",
    "src/kaggler/modes/modeling/*",
]

[tool.ruff]
target-version = "py310"
line-length = 88
src = ["src", "tests"]

[tool.ruff.lint]
# 默认规则集（pyflakes F + 关键 pycodestyle E）：捕获未用导入、未定义名、
# 真实语法/逻辑问题。CI 以 `ruff check` 对任何命中即判失败。
# 暂不开启 E501/I/UP 等会要求大面积重排既有源码的规则，避免与现有约定冲突。
select = ["E4", "E7", "E9", "F"]